# coreutils-differential-fuzzing

./: .gitignore  LICENSE  README.md  index.tex  sources.bib
fuzzer/: .gitignore  Cargo.toml  Makefile.toml  README.md  coverage.c
fuzzer/get_guard_num/: Cargo.toml
fuzzer/get_guard_num/src/: lib.rs
fuzzer/setup_guard_redirection/: Cargo.toml
fuzzer/setup_guard_redirection/src/: lib.rs
fuzzer/src/: base64.rs  main.rs
fuzzer/src/generic/: always_feedback.rs  cov_feedback.rs  executor.rs  mod.rs  new_corpus_entry_log_feedback.rs  shmem.rs  stdio.rs  timeout.rs
performance_test/: .gitignore  Cargo.toml  LICENSE  notes.md  res.csv  res_additional.csv
performance_test/rtld_fini_preload/: Cargo.toml
performance_test/rtld_fini_preload/src/: lib.rs
performance_test/shmem_preload/: Cargo.toml
performance_test/shmem_preload/src/: lib.rs
performance_test/src/: constant_file_stdin.rs  custom_rtld_fini.rs  executor.rs  file_stdin.rs  file_write_only.rs  instrumented_simple_stdin.rs  lib.rs  main.rs  preload_transparent_main.rs  shared_mem_write.rs  shmem.rs  shmem_preload.rs  simple_stdin.rs
performance_test/transparent_preload/: Cargo.toml
performance_test/transparent_preload/src/: lib.rs
report/: .gitignore  index.tex  make_plots.py  sources.bib
