workspace = { members = [
    "transparent_preload",
    "rtld_fini_preload",
    "shmem_preload",
] }
[package]
name = "performance_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
libafl_bolts = { path = "../LibAFL/libafl_bolts" }
libc = "*"
serde_json = "*"

[[bin]]
name = "performance_test"
path = "src/main.rs"
